no edits to the html. added a png for the map and put proper attribution under the canvas

--- a/Diplomacy.html
+++ b/Diplomacy.html
@@ -11,7 +11,7 @@
             <h1>Diplomacy</h1>
         </header>
         <main class="fc">
-            <canvas id="myCanvas" width="1250" height="750"></canvas>
+            <canvas id="myCanvas"></canvas>
             <article id="orders">
                 <section id="buttons">
                     <button id="move" onclick="openMoveMenue();">Moves</button>
@@ -24,5 +24,11 @@
                 <section id="notification"></section>
             </article>
         </main>
+        <footer id="recognitions">
+            <p>Diplomacy map PNG is from <a href="https://commons.wikimedia.org/wiki/File:Diplomacy_Game_Board_-_%22Classic%22.png">Wikimedia Commons</a> under the 
+                <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.en">Creative Commons Attribution-Share Alike 4.0 International license</a>.
+                No edits were made to the PNG direclty, but items were placed on top of it in the HTML canvas. 
+            </p>
+        </footer>
     </body>
 </html>
