created the other menues

--- a/Diplomacy.html
+++ b/Diplomacy.html
@@ -10,7 +10,7 @@
         <header id="header">
             <h1>Diplomacy</h1>
         </header>
-        <main class="fc">
+        <main>
             <canvas id="myCanvas"></canvas>
             <article id="orders">
                 <section id="buttons">
