made the photo fit the canvas and not be blurry

--- a/Diplomacy.html
+++ b/Diplomacy.html
@@ -15,7 +15,7 @@
             <h1>Diplomacy</h1>
         </header>
         <main class="fc">
-            <canvas id="myCanvas"></canvas>
+            <canvas id="myCanvas" width="1300" height="1000"></canvas>
             <article id="orders">
                 <section id="buttons">
                     <button id="move" onclick="openMoveMenue();">Moves</button>
