fixed support menue opening and not fitting my right side of screen. added retreat menue option, added resign menue

--- a/Diplomacy.html
+++ b/Diplomacy.html
@@ -22,6 +22,7 @@
                     <button id="support" onclick="openSupportMenue();">Supports</button>
                     <button id="build" onclick="openBuildMenue();">Builds</button>
                     <button id="disband" onclick="openDisbandMenue();">Disbands</button>
+                    <button id="retreat" onclick="openRetreatMenue();">Retreat</button>
                     <button id="resign" onclick="openResignMenue();">Resignation</button>
                 </section>
                 <section id="inputs" class="fc"></section>
