added convoy menue. added working disband functionality

--- a/Diplomacy.html
+++ b/Diplomacy.html
@@ -20,6 +20,7 @@
                 <section id="buttons">
                     <button id="move" onclick="openMoveMenue();">Moves</button>
                     <button id="support" onclick="openSupportMenue();">Supports</button>
+                    <button id="convoy" onclick="openConvoyMenue();">Convoy</button>
                     <button id="build" onclick="openBuildMenue();">Builds</button>
                     <button id="disband" onclick="openDisbandMenue();">Disbands</button>
                     <button id="retreat" onclick="openRetreatMenue();">Retreat</button>
